++++++++++++
FCTX Changes
++++++++++++

Whats new in FCT 1.3
--------------------

 - ENH: Reduced malloc's for exceptional cases. Since failed tests are,
   as a rule exceptional, there was no need to allocate memory for a
   list to hold error results until such time as an error occurs. This
   lead to a relatively minor speed up.
 - ENH: New fct_chk_incl_str, will check at a string includes a
   substring and report a useful error message if it does not include
   the substring.
 - ENH: New fct_chk_incl_istr, case insensitive variant of
   fct_chk_incl_str.


Whats new in FCT 1.2
--------------------

Highlights for this release include access to a command line parser for each
EXE built with FCTX. You are now able to customize your command line to add
flags that you may require for unit testing. To help you utilize any custom
flags, conditional tests and tests suites where also added.  These changes were
designed to help you run a "quick set" of tests while in development mode, but
allowing you run a full suite of tests during your continuous builds.

 - ENH: (sys-command-line-parser) ability to parse and read command line
   options.
 - ENH: (sys-conditional-test-runs): ability to run test suites based on a
   conditional. See FCT_FIXTURE_SUITE_BGN_IF and FCT_SUITE_BGN_IF macros.
 - ENH: (sys-conditional-test-runs): ability to run tests based on a 
   conditional. See new FCT_TEST_IF and FCT_QTEST_IF macros.
 - ENH: (sys-clean-up-variables): moved extra variables into a single
   structure used throughout the FCTX test run, this helps to reduce the noise
   in a debugger watch windows.
 - FIX: (486457) #pragma down to warning level 3 for MSC during FCTMF calls.
 - FIX: (501472) CMAKE now configures MSC to compile with /W4. 
 - FIX: (501474) GCC now compiles with higher warning levels
 - FIX: (501476) Removed redundant count found in FCT_END.
 - FIX: (512202) Fixed test_chk failures in CTEST due to trying to configure